# r101-weather-cli

./: .env.example  .gitignore  Cargo.toml  README.md
src/: coloring.rs  forecast.rs  main.rs  open_meteo.rs  open_weather.rs  owheater_onecall.rs  weather.rs  yandex_weather.rs
